align fix for mobile

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8597,3 +8597,7 @@ body {
 }
 
 /*# sourceMappingURL=main.css.map */
+
+.form-horizontal {
+  max-width: 93%;
+}
